# Simulant

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  shell.nix
src/: main.cpp
src/controllers/: ant.cpp  ant.hpp  ant.tpp  cli.cpp  cli.hpp  colony.cpp  game.cpp  game.hpp  random.cpp  random.hpp
src/models/: action.hpp  grid.cpp  grid.hpp  grid.tpp  space.cpp  space.hpp
src/view/: circle.cpp  color.cpp  color.hpp  hud.cpp  hud.hpp  render.cpp  update.cpp  view.cpp  view.hpp
test/: test.cpp
tests/controllers/: ant.cpp  game.cpp  random.cpp
tests/models/: grid.cpp  space.cpp
